syntax="proto3";

option java_multiple_files = true;
option java_package = "exert.grpc.ktdemo.proto";
option java_outer_classname = "BookProto";
option objc_class_prefix = "Exert";

package grpcdemo;

service DemoBook {
    rpc PeekBookName (DemoBookRequest) returns (DemoBookReply) {}
}

message DemoBookRequest {
    int64 id = 1;
}

message DemoBookReply {
    string name = 1;
}
